--- a/Greatkart/static/css/ui.css
+++ b/Greatkart/static/css/ui.css
@@ -1566,9 +1566,10 @@ div {
 
 .searchseation {
   align-content: flex-end;
-  top:20px;
+  top:60px;
   position: absolute;
   border-radius: 25px;
+  padding: 14px 10px 10px 10px;
   background-color: rgba(50,50,50,.9);
 }
 
@@ -1578,7 +1579,8 @@ div {
     top:200px;
     width: calc(50%);
     height: auto;
-    padding: 14px 10px 10px;
+    padding: 14px 10px 10px 10px;
+    margin-left: 10px;
     position: relative;
     background-color: rgba(50,50,50,.9);
 }
@@ -1594,4 +1596,9 @@ div {
   
   position: relative;
   background-size: 100% 100% !important;
+}
+
+.site-footer {
+  background-color: rgba(0,0,0,1);
+  color: rgba(250,249,249,1);
 }
