--- a/templates/home.html
+++ b/templates/home.html
@@ -22,11 +22,11 @@
                 
                 <div class="row">
 
-                    <h4>Are you looking to buy a Tyre?</h4>
+                    <h4 class="small">Are you looking to buy a Tyre?</h4>
                     
                     <div class="col-sm-5 ">
                         <div class="col-sm-12">
-                        <p>How to find car tyre size? <br>
+                        <p class="small">How to find car tyre size? <br>
                             225 is the section width of a tyre, 55 is Aspect Ratio of tyre, 18 is Diameter of the wheel rim</p>
                             
                             <img class="img-fluid" src="{% static 'images/banners/tyresize.png' %}">
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                                 
-                                <button class="btn btn-primary" type="submit">
+                                <button class="btn btn-primary btn-sm" type="submit">
                                     Search
                                     <i class="fa fa-search"></i>
                                 </button>
@@ -95,19 +95,87 @@
 
 
     </div>
+
+
+    
     
 </section>
 <!-- ========================= SECTION MAIN END// ========================= -->
 
 
-    
+<div class="row">
+    <hr>
+</div>
+
+<section  class="section-intro padding-y-sm">
+    <div class="row">
+     
+      
+    <div class="col-sm-4   d-flex justify-content-center">
+        
+
+        <img decoding="async"  src="https://www.shop.genapps.work/wp-content/uploads/2022/11/baseline_local_shipping_black_48dp.png" class="attachment-full size-full" alt="" loading="lazy" />
+        
+        <h6 class="">Free Services</h6>
+        
+    </div>
+
+    <div class="col-sm-4   d-flex justify-content-center">
+        
+ 														 
+        <img decoding="async"   src="https://www.shop.genapps.work/wp-content/uploads/2022/11/baseline_support_agent_black_48dp.png" class="attachment-full size-full" alt="" loading="lazy">
+        <h6>Quick response</h6>	
+    </div>
+
+    <div class="col-sm-4   d-flex justify-content-center">
+        
+        <img decoding="async" src="https://www.shop.genapps.work/wp-content/uploads/2022/11/baseline_thumb_up_black_48dp.png" class="attachment-full size-full" alt="" loading="lazy"> 
+        <h6>Value for Money</h6>		
+ 
+</div>
+
+</section>
+ 
+
+
+<div class="row">
+    <hr>
+</div>
+
+
+
+ 
+    <section  class="section-intro padding-y-sm">
+            
+    <div class='row'>
+        <div class="col-sm-1  d-flex justify-content-center">
+            
+        </div>
+        <div class="col-sm-2  d-flex justify-content-center">
+            <img decoding="async"   src="https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTAPPP-2.png"  class="img-fluid" alt="" loading="lazy" srcset="https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTAPPP-2.png 519w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTAPPP-2-300x300.png 300w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTAPPP-2-150x150.png 150w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTAPPP-2-100x100.png 100w" sizes="(max-width: 519px) 100vw, 519px">
+        </div>
+        <div class="col-sm-2  d-flex justify-content-center">
+            <img decoding="async"  src="https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTRA2-1.png"  class="img-fluid" alt="" loading="lazy" srcset="https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTRA2-1.png 521w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTRA2-1-300x300.png 300w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTRA2-1-150x150.png 150w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTRA2-1-100x100.png 100w" sizes="(max-width: 521px) 100vw, 521px">
+        </div>
+        <div class="col-sm-2  d-flex justify-content-center">
+            <img decoding="async"  src="https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTA3.png"  class="img-fluid" alt="" loading="lazy" srcset="https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTA3.png 522w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTA3-300x300.png 300w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTA3-150x150.png 150w, https://www.shop.genapps.work/wp-content/uploads/2022/11/INSTA3-100x100.png 100w" sizes="(max-width: 522px) 100vw, 522px">
+        </div>
+        <div class="col-sm-2  d-flex justify-content-center">
+            <img decoding="async"   src="https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-1024x1024.jpg"  class="img-fluid" alt="" loading="lazy" srcset="https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-1024x1024.jpg 1024w, https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-300x300.jpg 300w, https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-150x150.jpg 150w, https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-768x768.jpg 768w, https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-600x600.jpg 600w, https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n-100x100.jpg 100w, https://www.shop.genapps.work/wp-content/uploads/2022/11/274072744_1632858907058253_8917029298714658015_n.jpg 1080w" sizes="(max-width: 1024px) 100vw, 1024px">
+        </div>
+        <div class="col-sm-2  d-flex justify-content-center">
+            <img decoding="async"  src="https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-1024x1024.jpg"  class="img-fluid" alt="" loading="lazy" srcset="https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-1024x1024.jpg 1024w, https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-300x300.jpg 300w, https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-150x150.jpg 150w, https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-768x768.jpg 768w, https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-600x600.jpg 600w, https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n-100x100.jpg 100w, https://www.shop.genapps.work/wp-content/uploads/2022/11/311588749_1821728061504669_355550486947033650_n.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px">
+        </div>
+        <div class="col-sm-1  d-flex justify-content-center">
+            
+        </div>
+    </div>
+    </section>
    
     
    
     <script>
-        setTimeout(function () {
-            $('#myModal2').modal('show');
-        }, 2000);
+        
         
         getsizes('width');
         
