--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,15 @@
         });
         // jquery end
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8W8K54PS5"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-D8W8K54PS5');
+    </script>
 </head>
 
 <body>
