--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,36 +1,43 @@
 {% load static %}
 
 <!-- ========================= FOOTER ========================= -->
-<footer class="section-footer border-top">
-    <div class="container">
-        <section class="footer-bottom border-top row">
-            <div class="col-md-2">
-                <p class="text-muted"> &copy 2022 Best Buy </p>
+<footer class="section-footer border-top ">
+    <footer id="colophon" class="site-footer">
+        <div class="woostify-container container">
+ 
+
+            <div class="site-info row">
+                        <div class="container pt-3 pb-2">
+                            <div class="d-flex justify-content-center">
+                                    <span  class="pe-4  pb-3"><a href="https://www.facebook.com/besttyre/"
+                                            target="_blank"><i style="color:white;"  class="fab fa-facebook-f"></i></a></span>
+                                    <span  class="pe-4  pb-3"><a href="https://www.instagram.com/besttyre/"
+                                            target="_blank"><i style="color:white;"  class="fab fa-instagram"></i></a></span>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <p class="pe-4"><a style="color:white;"  href="/">Home</a></p>
+                                <p class="pe-4"><a  style="color:white;" class="" href="/about-us">About Us</a></p>
+                                <p class="pe-4"><a  style="color:white;" href="/privacy-policy">Privacy Policy</a></p>
+                                <p class="pe-4"><a style="color:white;"  href="/returns-policy">Refund Policy</a></p>
+                            </div>
+                        </div>
             </div>
-            <div class="col-md-8 text-md-center">
-                <span class="px-2">sales@besttyre.lk</span>
-                <span class="px-2">+94 7733Testing</span>
-                <span class="px-2">BTOL</span>
-            </div>
-            <div class="col-md-2 text-md-right text-muted">
-                <i class="fab fa-lg fa-cc-visa"></i> 
-                <i class="fab fa-lg fa-cc-mastercard"></i>
-            </div>
-        </section>
-    </div><!-- //container -->
+        </div>
+    </footer>
 </footer>
 <!-- ========================= FOOTER END // ========================= -->
 
 <script>
-$(document).ready(function(){
-    $('.thumb a').click(function(e){
-        e.preventDefault();
-        $('.mainImage img').attr('src', $(this).attr("href"));
+    $(document).ready(function () {
+        $('.thumb a').click(function (e) {
+            e.preventDefault();
+            $('.mainImage img').attr('src', $(this).attr("href"));
+        })
     })
-})
 
 
 </script>
 
 </body>
+
 </html>
