--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -74,8 +74,9 @@
         </div> <!-- row.// -->
         <div class="row">
           <div class="col-sm-4 fw-bold mb-1">Pickup From</div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 mb-1">
             <select class="form-select">
+              <option>-Select-</option>
               <option>Staple Street</option>
               <option>Dehiwala</option>
               <option>Polonnaruwa</option>
