--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -23,7 +23,9 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
 
-       
+       <div class="col-sm-1">
+
+       </div>
         <a  class="navbar-brand" href="{% url 'home' %}"> <img class="logo rounded mx-auto d-block" src="{% static './images/logo.png' %}"></a>
 
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,6 +62,9 @@
 
 
           
+        </div>
+        <div class="col-sm-1">
+        
         </div>
         <div class="">
           {% if user.id is None %}
