--- a/templates/store/store_search_view.html
+++ b/templates/store/store_search_view.html
@@ -25,11 +25,11 @@
 <div class="row">
 	<aside class="col-md-3">
 		
-<div class="card">
-	<div class="card-header">
+<div class="card border-0">
+	<div class="card-header border-0">
 		Filter
 	</div>
-	<div class="card-body">
+	<div class="card-body border-0">
 
 		{% if 'width' in request.GET %}
 		<form action="{% url 'search_size' %}" method="GET" class="search">
@@ -169,7 +169,7 @@
 		 
 		<figure class="card card-product-grid">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col">
 					<div class="img-wrap"> 
 						{% if product.discount > 0 %}
 						<span class="tag-on-sale onsale sale-left">-{{ product.discount }}%</span>
@@ -182,11 +182,11 @@
 					</div> <!-- img-wrap.// -->
 				</div>
 
-				<div class="col-sm-6">
+				<div class="col">
 					<div class="row">
 						<div style="padding-top: 7%;">
 							{% if product.brandimg %}
-							<figcaption   style="max-height: 85px;">
+							<figcaption   style="height: 70px;">
 								{% if product.brandimg %}
 								<img style="max-height: 85px;max-width: 140px;padding-left: 10px;" class="img-fluid" src="{{ product.brandimg.url }}">
 								{% else %}
